# Pixtral_Recipies

./: README.md  pyproject.toml
pixtralai/: main.py
tests/: test_main.py
