[tool.poetry]
name = "pixtralai"
version = "0.1.0"
description = "Notebooks and Example applications of pixtral"
authors = ["Riaz Munshi <riaz.2012@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mistral-common = "^1.4.0"
vllm = "^0.6.1"
pytest = "^8.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
